# bitgn-trustworthy-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  package.json  pnpm-workspace.yaml  pyproject.toml
agents/: package.json  tsconfig.json
agents/src/: agent-types.ts  answer-file.ts  config.ts  connectrpc-client.ts  main.ts
agents/src/agent/: index.ts  runtime-exec.ts  system-prompt.ts  tool-defs.ts
agents/src/utils/: cost.ts  logger.ts
python/: workspace.py
